# pll_data_detection

./: README.md  do_notebook_by_cli.sh  multiple_run.sh  pyproject.toml
eda/: 240226_visualaization_train.ipynb  240228_make_fold.ipynb  240229_table_all_tag.ipynb  240229_visualaization_pii_dataset.ipynb  240301_calc_score_exp011.ipynb  240302_calc_score_exp012.ipynb  240302_check_valid_same.ipynb  2403031931_check_model_ouput_leakage_exp024.ipynb  240303_allign_all_tag_token_per_data.ipynb  240303_check_model_output.ipynb  240303_check_o_use_exp012.ipynb  240303_compare_e012_e020_valid_df.ipynb  240304_postprocess_implement.ipynb  2403060806_check_mixtral-8x7b-v1.ipynb  2403062231_deberta_model.ipynb  2403070720_allign_all_tag_token_per_data.ipynb  2403091217_check_external_data.ipynb  2403101700_get_all_token_str.ipynb  240319_visualaization_all_pii_dataset.ipynb  240321_tst_gemini.py  240322_tst_gpt4.py  240326_mpware_dataset.ipynb  2404031946_visualization_generate_text.ipynb  2404040731_get_all_token_str_with_generate_text.ipynb  2404051429_check_original_train.ipynb  2404052030_make_pii_part.ipynb  240405_visualization_fake_data.ipynb  240410_make_spell_checked_data.ipynb  2404131402_check_train.ipynb  240413_check_pred.ipynb  2404141344_check_exp072_train_data.ipynb  deberta_tokenizer_test.ipynb  e002.ipynb  eda002.ipynb  eda_external_pii_dataset.ipynb  external_pii_dataset.ipynb  understand_metrics.ipynb  visualaization_train.ipynb
exp/: exp001.ipynb  exp001_org.ipynb  exp002.ipynb  exp003.ipynb  exp004.ipynb  exp005.ipynb  exp006.ipynb  exp007.ipynb  (+119 more)
