[tool.poetry]
name = "pll-data-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pll_data_detection"}]

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.2"
ipykernel = "^6.29.0"
polars = "^0.20.5"
matplotlib = "^3.8.2"
datasets = "^2.16.1"
transformers = "^4.37.2"
wandb = "^0.16.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
